[package]
name = "bookgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
bytemuck = { version = "1.7.2", features = ["derive"] }
# num-traits = "0.2.14"
# num-derive = "0.3"
solana-sdk = "*"